[workspace.package]
version = "0.1.0"
authors = ["godot <me@kawayi.moe>"]
description = "Electric brain, 电脑"
documentation = "https://github.com/moefra/yongle"
repository = "https://github.com/moefra/yongle"
homepage = "https://github.com/moefra/yongle"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace]
members = [
    "ylctl",
    "yongle-cas",
    "yongle-core",
    "yongle-digest",
    "yongle-id",
    "yongle-primitives",
]
default-members = ["yongle-core"]
resolver = "3"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.lints.rustdoc]
missing_docs = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
lto = false
panic = "unwind"
strip = "none"
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.test]
inherits = "dev"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false

[profile.bench]
inherits = "release"

[workspace.dependencies]
# self-host projects
yongle-core = { path = "./yongle-core" }
yongle-id = { path = "./yongle-id" }
yongle-digest = { path = "./yongle-digest" }
yongle-cas = { path = "./yongle-cas" }
yongle-primitives = { path = "./yongle-primitives" }

# rendering engine
typst = "0.14"

# io
tokio = { version = "1.50", features = ["full"] }

# serialization
serde_core = "1.0"
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.8"

# error handling and logging
thiserror = "2.0"
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"

# collections
camino = "1.2"
papaya = "0.2"
smol_str = { version = "0.3",  features = ["std", "serde"] }
ecow = "0.2"
moka = { version = "0.12", features = ["sync", "future"] }
nohash-hasher = "0.2"
arrayvec = "0.7"

# micro utilities
unicode-ident = "1.0"
semver = "1.0"
async-trait = "0.1"
hex = "0.4"

# memory management
mimalloc = "0.1"

# hashing
ahash = "0.8"
blake3 = "1.8"
sha2 = "0.11.0"
