[package]
name = "ylctl"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimalloc.workspace = true

[lints]
workspace = true
