[package]
name = "yongle-cas-types"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yongle-digest.workspace = true
thiserror.workspace = true
eyre.workspace = true
rkyv.workspace = true

[lints]
workspace = true
