[package]
name = "yongle-cas"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rkyv.workspace = true
camino.workspace = true
blake3.workspace = true
thiserror.workspace = true
yongle-digest.workspace = true

[lints]
workspace = true
