[package]
name = "yongle-core"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
yongle-id.workspace = true

[lints]
workspace = true
