[package]
name = "yongle-digest"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
rkyv.workspace = true
camino.workspace = true
smol_str.workspace = true
serde.workspace = true
ecow.workspace = true
arrayvec.workspace = true
hex.workspace = true
serde_core.workspace = true
async-trait.workspace = true
sha2.workspace = true


[lints]
workspace = true
