[package]
name = "yongle-id"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
semver.workspace = true
thiserror.workspace = true
unicode-ident.workspace = true

[lints]
workspace = true
