[package]
name = "yongle-primitives"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nohash-hasher.workspace = true
ahash.workspace = true
papaya.workspace = true
moka.workspace = true
